--- a/index.css
+++ b/index.css
@@ -3,18 +3,24 @@
     margin:0px;
 }
 
+body{
+ background-color:rgba(219, 223, 169, 0.5);
+}
 .mainn{
-    /* justify-content: center; */
-    width: auto;
+    
+    /* width: auto; */
+    box-shadow: 1px 20px 30px 1px rgb(24, 16, 1);
     background: #ADA996;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
-
-
-    display:inline-block;
-    margin:12px 45px 0px 89px;
     padding:30px;
+    width: 400px;
+    height: 700px;
+    display: block;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
 }
 #H3{
  
@@ -40,11 +46,17 @@
     /* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
 
+
+
+
 .bns{
    padding: 10px; 
+   
 }
 #bn1,#bn2{
     margin-top: 25px;
+  
+    display: inline-block;
     height:40px;
     width:122px;
     border-radius: 15px;
