--- a/index.css
+++ b/index.css
@@ -14,13 +14,10 @@ body{
     background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     padding:30px;
-    width: 400px;
-    height: 700px;
-    display: block;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%, -50%);
+    width: auto;
+    height: auto;
+    display:inline-block;
+  
 }
 #H3{
  
